# advanced_git_techniques

./: .dockerignore  Dockerfile  README.md  check_1.py  new_featue_1.txt  new_feautre_1_tested.txt  pyproject.toml  script_test.py  text_dev.txt  text_test.txt
.github/workflows/: docker.yml  lint.yml  tests.yml
