[project]
name = "test-advanced-git-techniques"
version = "0.1.0"
description = ""
authors = [
    {name = "DominikPtaszek231643",email = "231643@buas.nl"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode= false